# llm-wiki-okf-demo

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  main.py  mcp_server.py  pyproject.toml
.scratch/okf-demo/: MAP.md
.scratch/okf-demo/assets/: 01-xwiki-mcp-landscape.md
.scratch/okf-demo/issues/: 01-xwiki-mcp-landscape.md  03-xwiki-instance.md  (+8 more)
.scratch/repl-ux-fixes/: MAP.md
demo/sources/: billing-service-design.md  checkout-outage-runbook.md  checkout-service-design.md  incident-2026-04-postmortem.md  oncall-policy.md
demo/sources.baseline.extra/: ledger-service-design.md
docker/: docker-compose.yml  setup_xwiki.py
docs/: demo.md
docs/adr/: 0001-okf-conformant-wiki.md  0002-tool-calling-loop.md  0003-openai-compatible-backend.md  0004-git-stays-manual.md  0005-mcp-high-level-only.md  0006-human-gated-ingest.md  0007-structural-only-lint.md  0008-single-process-router.md  0009-slack-out-of-scope.md  0010-no-obsidian-integration.md  0011-pluggable-wiki-store.md  0012-okf-on-xwiki-mapping.md  0013-remote-review-gate.md  0014-automatic-answer-filing.md  0015-backend-aware-link-rendering.md  0016-xwiki-frontmatter-rendering.md  0017-xwiki-stored-link-rewriting.md
docs/agents/: triage-labels.md
scripts/: reset_sources.py  reset_xwiki.py
tests/: conftest.py  test_agent.py  test_config.py  test_okf.py  test_primitives.py  test_repl.py  test_router.py  test_store.py  test_xwiki_live.py
wikiagent/: __init__.py  agent.py  config.py  mcp_server.py  okf.py  primitives.py  repl.py  router.py  store.py  xwiki_client.py  xwiki_mcp_server.py
(+3 files in other folders)
